# PSP

./: .gitignore  CMakeLists.txt  README.md  how-to-commit.md  merge_csv.py  plot_hv.py  process_csv.py
data/: data_1021.csv  data_103.csv  data_1048.csv  data_1075.csv  data_1102.csv  data_1129.csv  data_1156.csv  data_1183.csv  data_1210.csv  data_1237.csv  data_1264.csv  data_1291.csv  data_130.csv  data_1318.csv  data_1345.csv  data_1372.csv  data_1399.csv  data_1426.csv  data_1453.csv  data_1480.csv  data_1507.csv  data_1534.csv  data_1561.csv  data_157.csv  data_1588.csv  data_1615.csv  data_1642.csv  data_1669.csv  data_1696.csv  data_1723.csv  data_1750.csv  data_1777.csv  data_1804.csv  data_1831.csv  data_184.csv  data_1858.csv  data_1885.csv  data_1912.csv  data_1939.csv  data_1966.csv  (+60 more)
result/INSGA2/: data_1021.csv  data_1048.csv  data_1129.csv  data_1183.csv  data_1210.csv  data_1291.csv  data_130.csv  data_1372.csv  data_1534.csv  data_157.csv  data_1588.csv  data_1669.csv  data_1723.csv  data_1750.csv  data_1804.csv  data_184.csv  data_1858.csv  data_1912.csv  data_1939.csv  data_1966.csv  data_1993.csv  data_2020.csv  data_2074.csv  data_2101.csv  data_2128.csv  data_2182.csv  data_2236.csv  data_2263.csv  data_2290.csv  data_2317.csv  data_2344.csv  data_238.csv  data_2398.csv  data_2425.csv  data_2452.csv  data_2506.csv  data_2587.csv  data_265.csv  data_2749.csv  data_2776.csv  (+16 more)
result/Obj1Greedy/: statistics.csv
result/greedy/: data_103.csv  data_1075.csv  data_1102.csv  data_1156.csv  data_1237.csv  data_1264.csv  data_1318.csv  (+37 more)
src/: main.cpp
(+22 files in other folders)
